Fix cut off background

--- a/css/main.css
+++ b/css/main.css
@@ -181,8 +181,8 @@ button:hover {
   clip-path: ellipse(125vw 50vh at 100% 0);
   top: 0;
   left: 0;
-  bottom: 50vh;
   right: 0;
+  height: 50vh;
   background: #000 center/cover no-repeat;
   z-index: -1;
 }
